cmake_minimum_required(VERSION 2.8)
project( Surface )

find_package(PCL 1.7 REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_library( plylib SHARED
		./include/wrap/ply/plylib.cpp
		./include/wrap/ply/plylib.h )

include_directories(${CMAKE_SOURCE_DIR}/include/)

set(ON_NURBS_INCLUDES
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm_attributes.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm_properties.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm_settings.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_annotation2.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_annotation.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_arccurve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_arc.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_archive.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_array_defs.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_array.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_base32.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_base64.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_beam.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_bezier.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_bitmap.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_bounding_box.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_box.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_circle.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_color.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_compress.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_cone.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_crc.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_curve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_curveonsurface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_curveproxy.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_cylinder.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_defines.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_detail.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_dimstyle.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_dll_resource.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_ellipse.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_error.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_evaluate_nurbs.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_extensions.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_font.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_fpoint.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_fsp_defs.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_fsp.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_geometry.h
    #${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_gl.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_group.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_hatch.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_hsort_template.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_instance.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_intersect.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_knot.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_layer.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_light.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_linecurve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_line.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_linestyle.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_linetype.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_lookup.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_mapchan.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_material.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_math.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_matrix.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_memory.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_mesh.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_nurbscurve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_nurbssurface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_object.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_object_history.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_objref.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_offsetsurface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_optimize.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_plane.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_planesurface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pluginlist.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pointcloud.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pointgeometry.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pointgrid.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_point.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polycurve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polyedgecurve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polylinecurve.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polyline.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_qsort_template.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_rand.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_rendering.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_revsurface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_rtree.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_sphere.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_string.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_sumsurface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_surface.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_surfaceproxy.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_system.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_textlog.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_texture.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_texture_mapping.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_torus.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_unicode.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_userdata.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_uuid.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_version.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_viewport.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_workspace.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_xform.h
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_zlib.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/closing_boundary.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_apdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_asdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_atdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_pdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_sdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_tdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_pdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_cylinder_pdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_sphere_pdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_surface_im.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_surface_pdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_surface_tdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/global_optimization_pdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/global_optimization_tdm.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/nurbs_data.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/nurbs_solve.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/nurbs_tools.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/sequential_fitter.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/sparse_mat.h
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/triangulation.h)

set(ON_NURBS_SOURCES
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm_attributes.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm_properties.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_3dm_settings.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_annotation2.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_annotation.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_arc.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_arccurve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_archive.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_array.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_base32.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_base64.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_beam.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_bezier.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_beziervolume.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_bitmap.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_bounding_box.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_box.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep_extrude.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep_io.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep_isvalid.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep_region.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep_tools.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_brep_v2valid.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_circle.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_color.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_compress.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_cone.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_crc.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_curve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_curveonsurface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_curveproxy.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_cylinder.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_defines.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_detail.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_dimstyle.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_dll.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_ellipse.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_embedded_file.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_error.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_error_message.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_evaluate_nurbs.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_extensions.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_font.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_fsp.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_geometry.cpp
    #${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_gl.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_group.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_hatch.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_instance.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_intersect.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_knot.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_layer.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_light.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_line.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_linecurve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_linetype.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_lookup.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_material.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_math.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_matrix.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_mesh.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_mesh_ngon.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_mesh_tools.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_morph.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_nurbscurve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_nurbssurface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_nurbsvolume.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_object.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_object_history.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_objref.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_offsetsurface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_optimize.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_plane.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_planesurface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pluginlist.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pointcloud.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_point.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pointgeometry.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_pointgrid.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polycurve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polyedgecurve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polyline.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_polylinecurve.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_precompiledheader.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_rand.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_revsurface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_rtree.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_sort.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_sphere.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_string.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_sum.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_sumsurface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_surface.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_surfaceproxy.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_textlog.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_torus.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_unicode.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_userdata.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_uuid.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_viewport.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_workspace.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_wstring.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_xform.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_zlib.cpp
    ${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_zlib_memory.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_memory.c
    	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_memory_util.c	
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/opennurbs_point.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/closing_boundary.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_apdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_asdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_atdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_pdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_sdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d_tdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_2d.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_curve_pdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_cylinder_pdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_sphere_pdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_surface_im.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_surface_pdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/fitting_surface_tdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/global_optimization_pdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/global_optimization_tdm.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/nurbs_solve_eigen.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/nurbs_tools.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/sequential_fitter.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/sparse_mat.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/on_nurbs/triangulation.cpp
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/adler32.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/compress.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/crc32.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/deflate.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/infback.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/inffast.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/inflate.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/inftrees.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/trees.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/uncompr.c
	${CMAKE_SOURCE_DIR}/include/pcl/surface/3rdparty/opennurbs/zutil.c)



add_library(ON_NURBS SHARED
		${ON_NURBS_INCLUDES}
		${ON_NURBS_SOURCES}) 
 

set_target_properties(ON_NURBS PROPERTIES LINKER_LANGUAGE CXX)

add_executable( Surface Surface.cpp)
target_link_libraries( Surface plylib ON_NURBS)
target_link_libraries( Surface ${PCL_LIBRARIES})
